syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "my-grpc-app/generated;pb";

service SplitPayAppService {
  rpc SignUp(SignUpInput) returns (SignUpOutput);
  rpc LogIn(LogInInput) returns (LogInOutput);
  rpc GetSetupStatus(google.protobuf.Empty) returns (GetSetupStatusOutput);
  rpc SetDisplayName(SetDisplayNameInput) returns (SetDisplayNameOutput);
  rpc AddPhoneNumber(AddPhoneNumberInput) returns (AddPhoneNumberOutput);
  rpc RemovePhoneNumber(RemovePhoneNumberInput) returns (RemovePhoneNumberOutput);
  rpc FetchPhoneNumbers(google.protobuf.Empty) returns (FetchPhoneNumbersOutput);
  rpc AddEmail(AddEmailInput) returns (AddEmailOutput);
  rpc RemoveEmail(RemoveEmailInput) returns (RemoveEmailOutput);
  rpc FetchEmails(google.protobuf.Empty) returns (FetchEmailsOutput);
}

message SignUpInput {
  string username = 1;
  string password = 2;
}

message SignUpOutput {
  int32 status_code = 1;
  string user_id = 2;
  string token = 3;
  string message = 4;
}

message LogInInput {
  string username = 1;
  string password = 2;
}

message LogInOutput {
  int32 status_code = 1;
  string user_id = 2;
  string token = 3;
  string message = 4;
}

message GetSetupStatusOutput {
  bool is_setup_completed = 1;
}

message SetDisplayNameInput {
  string display_name = 1;
}

message SetDisplayNameOutput {
  bool success = 1;
}

message PhoneNumber {
  string contact = 1;
  bool is_searchable = 2;
}

message AddPhoneNumberInput {
  PhoneNumber phone_number = 1;
}

message AddPhoneNumberOutput {
  bool success = 1;
}

message RemovePhoneNumberInput {
  string phone_number = 1;
}

message RemovePhoneNumberOutput {
  bool success = 1;
}

message FetchPhoneNumbersOutput {
  repeated PhoneNumber phone_numbers = 1;
}

message Email {
  string address = 1;
  bool is_searchable = 2;
}

message AddEmailInput {
  Email email = 1;
}

message AddEmailOutput {
  bool success = 1;
}

message RemoveEmailInput {
  string email = 1;
}

message RemoveEmailOutput {
  bool success = 1;
}

message FetchEmailsOutput {
  repeated Email emails = 1;
}